2008-06-12  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Version 0.9.8-rc2

2008-06-12  Michal Ludvig  <michal@logix.cz>

	* s3cmd, s3cmd.1: Added GLOB (shell-style wildcard) exclude, renamed
	  orig regexp-style --exclude to --rexclude

2008-06-11  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Version 0.9.8-rc1

2008-06-11  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Remove python 2.5 specific code (try/except/finally 
	  block) and make s3cmd compatible with python 2.4 again.
	* s3cmd, S3/Config.py, s3cmd.1: Added --exclude-from and --debug-syncmatch
	  switches for sync.

2008-06-10  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Added --exclude switch for sync.
	* s3cmd.1, NEWS: Document --exclude

2008-06-05  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.7
	  ----------------------

2008-06-05  Michal Ludvig  <michal@logix.cz>

	* S3/PkgInfo.py: Bumped up version to 0.9.7
	* NEWS: Added 0.9.7
	* TODO: Removed completed tasks
	* s3cmd, s3cmd.1: Updated help texts, 
	  removed --dry-run option as it's not implemented.
	
2008-06-05  Michal Ludvig  <michal@logix.cz>

	* S3/Config.py: Store more file attributes in sync to S3.
	* s3cmd: Make sync remote2local more error-resilient.

2008-06-04  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Implemented cmd_sync_remote2local() for restoring
	  backup from S3 to a local filesystem
	* S3/S3.py: S3.object_get_uri() now requires writable stream 
	  and not a path name.
	* S3/Utils.py: Added mkdir_with_parents()

2008-06-04  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Refactored cmd_sync() in preparation 
	  for remote->local sync.

2008-04-30  Michal Ludvig  <michal@logix.cz>

	* s3db, S3/SimpleDB.py: Implemented almost full SimpleDB API.

2008-04-29  Michal Ludvig  <michal@logix.cz>

	* s3db, S3/SimpleDB.py: Initial support for Amazon SimpleDB. 
	  For now implements ListDomains() call and most of the 
	  infrastructure required for request creation.

2008-04-29  Michal Ludvig  <michal@logix.cz>
